test/should_fail/enum_005.grg
// empty enum declarations are not allowed (see enum_model_002.gm)

using enum_model_002;

rule r {
	pattern {
	}
	modify {
	}
}

